unpackaged/main/default/objects/Enrollment_Record__c/Enrollment_Record__c.object-meta.xml
<CustomObject>
    <label>Enrollment Record</label>
    <nameField>
        <displayFormat>EN-{00000000}</displayFormat>
        <label>Enrollment Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollment Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>