unpackaged/main/default/objects/Enrollment_Record__c/fields/Academic_Success_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Academic_Success_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Academic Success Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enrollment_ASCs</relationshipName>
    <type>Lookup</type>
</CustomField>