unpackaged/main/default/objects/Enrollment_Record__c/fields/Accepted_By_School_of_Record__c.field-meta.xml
<CustomField>
    <fullName>Accepted_By_School_of_Record__c</fullName>
    <label>Status at School of Record?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>