unpackaged/main/default/objects/Enrollment_Record__c/fields/Accepted_to_Non_Partner_School_Already__c.field-meta.xml
<CustomField>
    <fullName>Accepted_to_Non_Partner_School_Already__c</fullName>
    <label>Accepted to Non-Partner School Already?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>