unpackaged/main/default/objects/Enrollment_Record__c/fields/Acknowledgement_of_Risk_Signed__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_of_Risk_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acknowledgement of Risk Signed</label>
    <type>Checkbox</type>
</CustomField>