unpackaged/main/default/objects/Enrollment_Record__c/fields/Begun_Passport_Process__c.field-meta.xml
<CustomField>
    <fullName>Begun_Passport_Process__c</fullName>
    <label>Begun Passport Process?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>