unpackaged/main/default/objects/Enrollment_Record__c/fields/Channel_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Channel_Enrollment__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Channel Enrollment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>