unpackaged/main/default/objects/Enrollment_Record__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Channel Enrollments</relationshipLabel>
    <relationshipName>Enrollment_Records7</relationshipName>
    <type>Lookup</type>
</CustomField>