unpackaged/main/default/objects/Enrollment_Record__c/fields/Code_of_Conduct_Signed__c.field-meta.xml
<CustomField>
    <fullName>Code_of_Conduct_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Code of Conduct Signed?</label>
    <type>Checkbox</type>
</CustomField>