unpackaged/main/default/objects/Enrollment_Record__c/fields/College_Counselor__c.field-meta.xml
<CustomField>
    <fullName>College_Counselor__c</fullName>
    <formula>Student_Account__r.Counseling__r.Owner:User.FirstName + &quot; &quot; + Student_Account__r.Counseling__r.Owner:User.LastName</formula>
    <label>College Counselor</label>
    <type>Text</type>
</CustomField>