unpackaged/main/default/objects/Enrollment_Record__c/fields/College_Planning_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>College_Planning_Form_Link__c</fullName>
    <label>College Planning Form Link</label>
    <type>Url</type>
</CustomField>