unpackaged/main/default/objects/Enrollment_Record__c/fields/Consulate__c.field-meta.xml
<CustomField>
    <fullName>Consulate__c</fullName>
    <label>Consulate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consulate General of Italy – Boston</fullName>
            </value>
            <value>
                <fullName>Consulate General of Italy – Chicago</fullName>
            </value>
            <value>
                <fullName>Consulate General of Italy – Detroit</fullName>
            </value>
            <value>
                <fullName>Consulate General of Italy – Houston</fullName>
            </value>
            <value>
                <fullName>Consulate General of Italy – Los Angeles</fullName>
            </value>
            <value>
                <fullName>Consulate General of Italy – Miami</fullName>
            </value>
            <value>
                <fullName>Consulate General of Italy – Montreal</fullName>
            </value>
            <value>
                <fullName>Consulate General of Italy – New York</fullName>
            </value>
            <value>
                <fullName>Consulate General of Italy – Ottawa</fullName>
            </value>
            <value>
                <fullName>Consulate General of Italy – Philadelphia</fullName>
            </value>
            <value>
                <fullName>Consulate General of Italy – San Francisco</fullName>
            </value>
            <value>
                <fullName>Consulate General of Italy – Toronto</fullName>
            </value>
            <value>
                <fullName>Consulate General of Italy – Vancouver</fullName>
            </value>
            <value>
                <fullName>Consulate General of Italy – Washington DC</fullName>
            </value>
            <value>
                <fullName>Consulate General of Spain – Boston</fullName>
            </value>
            <value>
                <fullName>Consulate General of Spain – Chicago</fullName>
            </value>
            <value>
                <fullName>Consulate General of Spain – Houston</fullName>
            </value>
            <value>
                <fullName>Consulate General of Spain – Los Angeles</fullName>
            </value>
            <value>
                <fullName>Consulate General of Spain – Miami</fullName>
            </value>
            <value>
                <fullName>Consulate General of Spain – Montreal</fullName>
            </value>
            <value>
                <fullName>Consulate General of Spain – New York</fullName>
            </value>
            <value>
                <fullName>Consulate General of Spain – Ontario</fullName>
            </value>
            <value>
                <fullName>Consulate General of Spain – San Jose (PR)</fullName>
            </value>
            <value>
                <fullName>Consulate General of Spain – San Francisco</fullName>
            </value>
            <value>
                <fullName>Consulate General of Spain – Toronto</fullName>
            </value>
            <value>
                <fullName>Consulate General of Spain – Washington DC</fullName>
            </value>
            <value>
                <fullName>Consulate General of Czech Republic – Chicago</fullName>
            </value>
            <value>
                <fullName>Consulate General of Czech Republic – Los Angeles</fullName>
            </value>
            <value>
                <fullName>Consulate General of Czech Republic – New York</fullName>
            </value>
            <value>
                <fullName>Consulate General of Czech Republic – Ottawa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>