unpackaged/main/default/objects/Enrollment_Record__c/fields/Course_Interest_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Course_Interest_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggers the Course Registration Confirmation Email Alert flow</description>
    <label>Course Interest Submitted</label>
    <type>Checkbox</type>
</CustomField>