unpackaged/main/default/objects/Enrollment_Record__c/fields/Course_Registration_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Registration_Close_Date__c</fullName>
    <inlineHelpText>The last day the student can register for courses. Usually determined by when an evaluation was completed or the program&#39;s registration open date.</inlineHelpText>
    <label>Course Registration Close Date</label>
    <type>Date</type>
</CustomField>