unpackaged/main/default/objects/Enrollment_Record__c/fields/Course_Score__c.field-meta.xml
<CustomField>
    <fullName>Course_Score__c</fullName>
    <formula>IF(  Course_Interest_Submitted__c  = TRUE, 5, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>