unpackaged/main/default/objects/Enrollment_Record__c/fields/Covid_Signed__c.field-meta.xml
<CustomField>
    <fullName>Covid_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Covid Signed</label>
    <type>Checkbox</type>
</CustomField>