unpackaged/main/default/objects/Enrollment_Record__c/fields/Criminal_Conviction__c.field-meta.xml
<CustomField>
    <fullName>Criminal_Conviction__c</fullName>
    <description>Information from the Application record</description>
    <label>Criminal Conviction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>