unpackaged/main/default/objects/Enrollment_Record__c/fields/Criminal_Conviction_Details__c.field-meta.xml
<CustomField>
    <fullName>Criminal_Conviction_Details__c</fullName>
    <description>Information from the Application record</description>
    <label>Criminal Conviction Details</label>
    <length>3500</length>
    <type>LongTextArea</type>
</CustomField>