unpackaged/main/default/objects/Enrollment_Record__c/fields/CTW_Fall_Semester_Preference__c.field-meta.xml
<CustomField>
    <fullName>CTW_Fall_Semester_Preference__c</fullName>
    <inlineHelpText>This is pulled from the Opportunity and updates if changed on the Opportunity.</inlineHelpText>
    <label>CTW Fall Semester Preference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>