unpackaged/main/default/objects/Enrollment_Record__c/fields/CTW_Student__c.field-meta.xml
<CustomField>
    <fullName>CTW_Student__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>CTW Student?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>