unpackaged/main/default/objects/Enrollment_Record__c/fields/Date_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Date_Cancel__c</fullName>
    <label>Date Cancel</label>
    <type>Date</type>
</CustomField>