unpackaged/main/default/objects/Enrollment_Record__c/fields/Date_Dismissed__c.field-meta.xml
<CustomField>
    <fullName>Date_Dismissed__c</fullName>
    <label>Date Dismissed</label>
    <type>Date</type>
</CustomField>