unpackaged/main/default/objects/Enrollment_Record__c/fields/Date_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Date_Enrolled__c</fullName>
    <label>Date Enrolled</label>
    <type>Date</type>
</CustomField>