unpackaged/main/default/objects/Enrollment_Record__c/fields/Date_Enrollment_Form_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Enrollment_Form_Submitted__c</fullName>
    <label>Date Enrollment Form Submitted</label>
    <type>DateTime</type>
</CustomField>