unpackaged/main/default/objects/Enrollment_Record__c/fields/Date_Financial_Appeal_Form_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Financial_Appeal_Form_Submitted__c</fullName>
    <label>Date Financial Appeal Form Submitted</label>
    <type>Date</type>
</CustomField>