unpackaged/main/default/objects/Enrollment_Record__c/fields/Date_Graduated__c.field-meta.xml
<CustomField>
    <fullName>Date_Graduated__c</fullName>
    <label>Date Graduated</label>
    <type>Date</type>
</CustomField>