unpackaged/main/default/objects/Enrollment_Record__c/fields/Date_Health_History_From_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_Health_History_From_Signed__c</fullName>
    <label>Date Health History From Signed</label>
    <type>Date</type>
</CustomField>