unpackaged/main/default/objects/Enrollment_Record__c/fields/Date_Verto_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Date_Verto_Cancel__c</fullName>
    <label>Date Verto Cancel</label>
    <type>Date</type>
</CustomField>