unpackaged/main/default/objects/Enrollment_Record__c/fields/Date_Withdrawal_Form_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Withdrawal_Form_Submitted__c</fullName>
    <label>Date Withdrawal Form Submitted</label>
    <type>Date</type>
</CustomField>