unpackaged/main/default/objects/Enrollment_Record__c/fields/Date_Withdrew__c.field-meta.xml
<CustomField>
    <fullName>Date_Withdrew__c</fullName>
    <label>Date Withdrew</label>
    <type>Date</type>
</CustomField>