unpackaged/main/default/objects/Enrollment_Record__c/fields/Disciplinary_Violation__c.field-meta.xml
<CustomField>
    <fullName>Disciplinary_Violation__c</fullName>
    <description>Information populated from the Application record</description>
    <label>Disciplinary Violation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>