unpackaged/main/default/objects/Enrollment_Record__c/fields/Disciplinary_Violation_Details__c.field-meta.xml
<CustomField>
    <fullName>Disciplinary_Violation_Details__c</fullName>
    <description>Information populated from the Application record</description>
    <label>Disciplinary Violation Details</label>
    <length>3500</length>
    <type>LongTextArea</type>
</CustomField>