unpackaged/main/default/objects/Enrollment_Record__c/fields/Does_student_have_concerns__c.field-meta.xml
<CustomField>
    <fullName>Does_student_have_concerns__c</fullName>
    <label>Does student have concerns</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>