unpackaged/main/default/objects/Enrollment_Record__c/fields/E164_Phone__c.field-meta.xml
<CustomField>
    <fullName>E164_Phone__c</fullName>
    <description>This field is needed for HeyMarket to work.</description>
    <formula>IF( LEN(SUBSTITUTE(

SUBSTITUTE(

SUBSTITUTE(

SUBSTITUTE(

SUBSTITUTE(

 Phone__c  , &quot;(&quot;, &quot;&quot;

), &quot;)&quot;, &quot;&quot;

), &quot; &quot;, &quot;&quot;

), &quot;-&quot;, &quot;&quot;

), &quot;+&quot;, &quot;&quot;

)) == 10 , &#39;1&#39;+SUBSTITUTE(

SUBSTITUTE(

SUBSTITUTE(

SUBSTITUTE(

SUBSTITUTE(

 Phone__c  , &quot;(&quot;, &quot;&quot;

), &quot;)&quot;, &quot;&quot;

), &quot; &quot;, &quot;&quot;

), &quot;-&quot;, &quot;&quot;

), &quot;+&quot;, &quot;&quot;

), SUBSTITUTE(

SUBSTITUTE(

SUBSTITUTE(

SUBSTITUTE(

SUBSTITUTE(

  Phone__c   , &quot;(&quot;, &quot;&quot;

), &quot;)&quot;, &quot;&quot;

), &quot; &quot;, &quot;&quot;

), &quot;-&quot;, &quot;&quot;

), &quot;+&quot;, &quot;&quot;

))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is for HeyMarket</inlineHelpText>
    <label>E164 Phone</label>
    <type>Text</type>
</CustomField>