unpackaged/main/default/objects/Enrollment_Record__c/fields/E_Email__c.field-meta.xml
<CustomField>
    <fullName>E_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>