unpackaged/main/default/objects/Enrollment_Record__c/fields/Enrolled_at_Academic_Provider__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_at_Academic_Provider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrolled at Academic Provider?</label>
    <type>Checkbox</type>
</CustomField>