unpackaged/main/default/objects/Enrollment_Record__c/fields/Enrolled_with_SOR__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_with_SOR__c</fullName>
    <formula>NOT(ISBLANK( Student_ID_SoR__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrolled with SOR?</label>
    <type>Checkbox</type>
</CustomField>