unpackaged/main/default/objects/Enrollment_Record__c/fields/Enrollment_Form_Completed__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Form_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrollment Form Completed</label>
    <type>Checkbox</type>
</CustomField>