unpackaged/main/default/objects/Enrollment_Record__c/fields/Enrollment_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Form_Link__c</fullName>
    <label>Enrollment Form Link</label>
    <type>Url</type>
</CustomField>