unpackaged/main/default/objects/Enrollment_Record__c/fields/Enrollment_Form_Questions_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Form_Questions_Concerns__c</fullName>
    <label>Enrollment Form Questions &amp; Concerns:</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>