unpackaged/main/default/objects/Enrollment_Record__c/fields/Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Status__c</fullName>
    <label>Enrollment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enrolled</fullName>
                <default>true</default>
                <label>Enrolled</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Graduated</fullName>
            </value>
            <value>
                <fullName>Pending Withdrawal</fullName>
            </value>
            <value>
                <fullName>Withdrew</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
            <value>
                <fullName>Verto Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>