unpackaged/main/default/objects/Enrollment_Record__c/fields/F_Enrollment_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>F_Enrollment_Form_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://Vertoeducation.formstack.com/forms/enrollment_record_form?aid=&quot;&amp;Student_Account__c&amp;&quot;&amp;program=&quot;&amp;Program__c,&quot;Enrollment Form Link&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment Form Link</label>
    <type>Text</type>
</CustomField>