unpackaged/main/default/objects/Enrollment_Record__c/fields/FAFSA_Completed__c.field-meta.xml
<CustomField>
    <fullName>FAFSA_Completed__c</fullName>
    <label>FAFSA Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>