unpackaged/main/default/objects/Enrollment_Record__c/fields/Financial_Appeal_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>Financial_Appeal_Form_Link__c</fullName>
    <label>Z_Financial Appeal Form Link</label>
    <type>Url</type>
</CustomField>