unpackaged/main/default/objects/Enrollment_Record__c/fields/Financial_Appeal_Form_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Financial_Appeal_Form_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Appeal Form Submitted</label>
    <type>Checkbox</type>
</CustomField>