unpackaged/main/default/objects/Enrollment_Record__c/fields/Financial_Appeal_Request__c.field-meta.xml
<CustomField>
    <fullName>Financial_Appeal_Request__c</fullName>
    <formula>hyperlink(&#39;https://Vertoeducation.formstack.com/forms/financial_appeal_form_1?aid=&#39;&amp;Student_Account__c&amp;&#39;&amp;program=&#39;&amp;Program__c, &#39;Financial Appeal Form Link&#39;)</formula>
    <label>Financial Appeal Request</label>
    <type>Text</type>
</CustomField>