unpackaged/main/default/objects/Enrollment_Record__c/fields/First_Enrollment_Record__c.field-meta.xml
<CustomField>
    <fullName>First_Enrollment_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Enrollment Record</label>
    <referenceTo>Enrollment_Record__c</referenceTo>
    <relationshipLabel>Enrollment Records</relationshipLabel>
    <relationshipName>Enrollment_Records</relationshipName>
    <type>Lookup</type>
</CustomField>