unpackaged/main/default/objects/Enrollment_Record__c/fields/Flights_Booked__c.field-meta.xml
<CustomField>
    <fullName>Flights_Booked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flights Booked?</label>
    <type>Checkbox</type>
</CustomField>