unpackaged/main/default/objects/Enrollment_Record__c/fields/Flights_Score__c.field-meta.xml
<CustomField>
    <fullName>Flights_Score__c</fullName>
    <formula>If( Flights_Booked__c = TRUE, 10, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flights Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>