unpackaged/main/default/objects/Enrollment_Record__c/fields/Generate_Second_Semester_Deposit_Case__c.field-meta.xml
<CustomField>
    <fullName>Generate_Second_Semester_Deposit_Case__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <inlineHelpText>Change this field to Yes to have the system automatically generate a Case for Admissions to collect a second deposit.</inlineHelpText>
    <label>Generate Second Semester Deposit Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>