unpackaged/main/default/objects/Enrollment_Record__c/fields/GPA__c.field-meta.xml
<CustomField>
    <fullName>GPA__c</fullName>
    <label>GPA</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>