unpackaged/main/default/objects/Enrollment_Record__c/fields/Group_Packet_Received__c.field-meta.xml
<CustomField>
    <fullName>Group_Packet_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Student has mailed in the documents required for the Verto group appointment but the packet has not yet been reviewed by the group leader as complete. When a group packet is received at Verto Headquarters, Visa Group Leader will check this box to indicate that the packet has been received.

When the box is checked email notification will be sent to the ENR record owner and an email will be sent to the student and to all contacts on the student account</description>
    <label>Group Packet Received</label>
    <type>Checkbox</type>
</CustomField>