unpackaged/main/default/objects/Enrollment_Record__c/fields/Have_Enough_Info_on_Partner_Schools__c.field-meta.xml
<CustomField>
    <fullName>Have_Enough_Info_on_Partner_Schools__c</fullName>
    <label>Have Enough Info on Partner Schools</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>