unpackaged/main/default/objects/Enrollment_Record__c/fields/HHF_Completed__c.field-meta.xml
<CustomField>
    <fullName>HHF_Completed__c</fullName>
    <formula>IF(ISBLANK(Date_Health_History_From_Signed__c), False, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HHF Completed?</label>
    <type>Checkbox</type>
</CustomField>