unpackaged/main/default/objects/Enrollment_Record__c/fields/Housing_Preference__c.field-meta.xml
<CustomField>
    <fullName>Housing_Preference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Housing Preference</label>
    <referenceTo>Housing_Preference__c</referenceTo>
    <relationshipLabel>Enrollment Records</relationshipLabel>
    <relationshipName>Enrollment_Records</relationshipName>
    <type>Lookup</type>
</CustomField>