unpackaged/main/default/objects/Enrollment_Record__c/fields/Imported_Notes__c.field-meta.xml
<CustomField>
    <fullName>Imported_Notes__c</fullName>
    <label>Student Financial Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>