unpackaged/main/default/objects/Enrollment_Record__c/fields/Insurance_Approved__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Approved__c</fullName>
    <label>Insurance Approved?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Uploaded</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>