unpackaged/main/default/objects/Enrollment_Record__c/fields/isMyStudent__c.field-meta.xml
<CustomField>
    <fullName>isMyStudent__c</fullName>
    <description>Determines if the person viewing the record is either the ASC or SLC.</description>
    <formula>OR(
    $User.Id = Academic_Success_Coordinator__c,
    $User.Id = Student_Life_Coordinator__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isMyStudent</label>
    <type>Checkbox</type>
</CustomField>