unpackaged/main/default/objects/Enrollment_Record__c/fields/Last_Retention_Status_Updater__c.field-meta.xml
<CustomField>
    <fullName>Last_Retention_Status_Updater__c</fullName>
    <label>Last Retention Status Updater</label>
    <length>255</length>
    <type>Text</type>
</CustomField>