unpackaged/main/default/objects/Enrollment_Record__c/fields/Matriculated__c.field-meta.xml
<CustomField>
    <fullName>Matriculated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Matriculated</label>
    <type>Checkbox</type>
</CustomField>