unpackaged/main/default/objects/Enrollment_Record__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <formula>Student_Account__r.Mobile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To update go to the Student&#39;s Account.</inlineHelpText>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>