unpackaged/main/default/objects/Enrollment_Record__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enrollment_Records</relationshipName>
    <type>Lookup</type>
</CustomField>