unpackaged/main/default/objects/Enrollment_Record__c/fields/Passport_Score__c.field-meta.xml
<CustomField>
    <fullName>Passport_Score__c</fullName>
    <formula>IF(  Program__r.Location__r.Name  = &quot;Hawaii&quot;, 20, IF(ISPICKVAL(Passport_Status__c , &quot;Approved&quot;), 20, IF (ISPICKVAL(Passport_Status__c, &quot;Uploaded&quot;), 10, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passport Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>