unpackaged/main/default/objects/Enrollment_Record__c/fields/Passport_Status__c.field-meta.xml
<CustomField>
    <fullName>Passport_Status__c</fullName>
    <label>Passport Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Not Applied</fullName>
            </value>
            <value>
                <fullName>Uploaded</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>