unpackaged/main/default/objects/Enrollment_Record__c/fields/Passport_Upload_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>Passport_Upload_Form_Link__c</fullName>
    <formula>HYPERLINK(&#39;https://vertoed.secure.force.com/PassportUpload?aid=&#39;&amp;Student_Account__c&amp;&#39;&amp;program=&#39;&amp;Program__c , &#39;Passport Upload Form&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passport Upload Form Link</label>
    <type>Text</type>
</CustomField>