unpackaged/main/default/objects/Enrollment_Record__c/fields/Payment_Cancellation_Signed__c.field-meta.xml
<CustomField>
    <fullName>Payment_Cancellation_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment &amp; Cancellation Signed?</label>
    <type>Checkbox</type>
</CustomField>