unpackaged/main/default/objects/Enrollment_Record__c/fields/Payment_Score__c.field-meta.xml
<CustomField>
    <fullName>Payment_Score__c</fullName>
    <formula>If(Opportunity__r.Actual_Amount_Due__c&lt;0, 40, 

IF(
(1-( Opportunity__r.Actual_Amount_Due__c /Opportunity__r.Net_Tuition__c)*40)&gt;40, 40, (1-( Opportunity__r.Actual_Amount_Due__c /Opportunity__r.Net_Tuition__c))*40))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>