unpackaged/main/default/objects/Enrollment_Record__c/fields/PEA_Signed__c.field-meta.xml
<CustomField>
    <fullName>PEA_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PEA Signed?</label>
    <type>Checkbox</type>
</CustomField>